--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lordyemight.github.io/TodoLIst-0026/",
+  "homepage": "https://lordyemight.github.io/OIBSIP-LVL2-TASK3",
   "name": "fetch",
   "version": "0.1.0",
   "private": true,
